--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -7,15 +7,182 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <style media="screen">
+  #tblData input{
+    width: 100%;
+  }
+  </style>
 
   <title>Flapjack + Bootstrap = Rock!!!</title>
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron mt-4">
-      <h1>Welcome to FlapWeb!!!</h1>
-      <button type="button" name="button" id="crea" class="btn btn-primary">Crear Registro</button>
+    <div class="table-responsive" id="blkData">
+
+      <nav aria-label="...">
+        Pasos:
+        <ul class="pagination" id="pasos">
+          <li class="page-item disabled">
+            <a class="page-link bg-primary text-white" href="#" tabindex="-1">1</a>
+          </li>
+          <li class="page-item disabled"><a class="page-link" href="#">2</a></li>
+          <li class="page-item disabled"><a class="page-link" href="#">3</a></li>
+        </ul>
+      </nav>
+
+      <table class="table table-hover" id="tblData">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">1</th>
+            <th scope="col">2</th>
+            <th scope="col">3</th>
+            <th scope="col">4</th>
+            <th scope="col">5</th>
+            <th scope="col">6</th>
+            <th scope="col">7</th>
+            <th scope="col">8</th>
+            <th scope="col">9</th>
+            <th scope="col">10</th>
+            <th scope="col">11</th>
+            <th scope="col">12</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">A</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">B</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">C</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">D</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">E</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">F</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">G</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+          <tr>
+            <th scope="row">H</th>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+            <td><input /></td>
+          </tr>
+        </tbody>
+      </table>
+      <button id="btnNext" type="button" name="btn" class="btn btn-success" data-action="steps">Siguiente</button>
     </div>
+
+    <div id="blkFile" class="d-none">
+      <form class="form" action="/monkey/sample" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="file" name="dataFile" value="Selecciona el archivo">
+        <input type="hidden" name="dataFull" value="">
+        <button id="btnSend" type="submit" name="btn" class="btn btn-success" data-action="steps">Subir Archivo</button>
+      </form>
+    </div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -24,20 +191,54 @@
 
   <script type="text/javascript">
 
-    $ = jQuery.noConflict();
+  $ = jQuery.noConflict();
 
-    $(document).ready(function(){
-      $("button#crea").on("click", function(){
-        $.getJSON('/monkey', function(data){
-          console.log("Vuelve de crear en BD", data);
-          if(data.status=="ok"){
-            alert("Record created");
-          }else{
-            alert("Record not created");
-          }
-        })
-      })
-    });
+  $(document).ready(function(){
+    let data = []
+
+
+    $("#tblData input").each((idx, item)=>{item.name='data'})
+
+    $("#btnNext").on("click", ()=>{
+      switch (data.length) {
+        case 0:
+        $("#pasos li a:nth(0), #pasos li a:nth(1)").toggleClass("bg-primary text-white text-black")
+
+        break;
+        case 1:
+        $("#pasos li a:nth(1), #pasos li a:nth(2)").toggleClass("bg-primary text-white text-black")
+
+        break;
+        case 2:
+        $("#pasos li a:nth(2)").toggleClass("bg-primary text-white text-black")
+        $("#btnNext").data({action: 'upload'}).text("Subir Archivo")
+        $("#blkData").slideUp(()=>{
+          $("#blkFile input[name='dataFull']").val(JSON.stringify(data))
+          $("#blkFile").removeClass("d-none")
+        });
+
+        break;
+
+        case 3:
+        $("#pasos li a:nth(2)").toggleClass("bg-primary text-white text-black")
+
+        break;
+        default:
+
+      }
+      if(data.length<3){
+        data.push( $("#tblData input").serializeArray() )
+        $("#tblData input").each((idx, item)=>{item.value=''})
+      }
+    })
+
+    $("#btnSend").on("click", ()=>{
+
+    })
+
+
+
+  });
   </script>
 </body>
 </html>
