json test added

--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -13,7 +13,7 @@
   }
   </style>
 
-  <title>Flapjack + Bootstrap = Rock!!!</title>
+  <title>Flapjack</title>
 </head>
 <body>
   <div class="container">
