Notebooks updated, gettin data from json file

--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -15,6 +15,7 @@
 
   <title>Flapjack</title>
 </head>
+
 <body>
   <div class="container">
     <div class="table-responsive" id="blkData">
@@ -233,7 +234,7 @@
     })
 
     $("#btnSend").on("click", ()=>{
-
+      // Redireccionar
     })
 
 
