--- a/LoadData/templates/search.html
+++ b/LoadData/templates/search.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Gráficos</title>
+    <title>Search</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -12,9 +12,24 @@
 
   </head>
   <body>
-    <div class="row">
-      <p> Test </p>
+    <div class="container">
+      <div id="results" style="width:90%; height:400px"></div>
     </div>
 
+    <div id="schFile" class="container">
+      <form action="/monkey/plot" method="post">
+        {% csrf_token %}
+        Measurement<br>
+        <input type="text" name="measurement_name"><br>
+        Strain<br>
+        <input type="text" name="strain_name"><br>
+        Media<br>
+        <input type="text" name="Media_name"><br>
+        DNA<br>
+        <input type="text" name="DNA_name"><br>
+
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </body>
 </html>
