Nav headers updated to Strain, Media, DNA

--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -25,10 +25,10 @@
         Pasos:
         <ul class="pagination" id="pasos">
           <li class="page-item disabled">
-            <a class="page-link bg-primary text-white" href="#" tabindex="-1">1</a>
+            <a class="page-link bg-primary text-white" href="#" tabindex="-1">Strain</a>
           </li>
-          <li class="page-item disabled"><a class="page-link" href="#">2</a></li>
-          <li class="page-item disabled"><a class="page-link" href="#">3</a></li>
+          <li class="page-item disabled"><a class="page-link" href="#">Media</a></li>
+          <li class="page-item disabled"><a class="page-link" href="#">DNA</a></li>
         </ul>
       </nav>
 
