--- a/LoadData/templates/plots.html
+++ b/LoadData/templates/plots.html
@@ -11,9 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
-
-    <script src="{% static 'd3/line.js' %}"></script>
     <script src="{% static 'fetch.umd.js' %}"></script>
+    <script src="{% static 'd3/line.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'd3/line.css' %}">
 
   </head>
   <body>
