Home page added

--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -10,11 +10,11 @@
 
   <style media="screen">
   #tblData input{
-    width: 100%;
+    width: 135%;
   }
   </style>
 
-  <title>Flapjack</title>
+  <title>Upload data</title>
 </head>
 
 <body>
