--- a/LoadData/templates/plots.html
+++ b/LoadData/templates/plots.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Gráfico</h2>
+      <h2>Results</h2>
 
       <div id="graph" style="width:90%; height:400px"></div>
     </div>
