Minor changes to notebooks

--- a/LoadData/templates/home.html
+++ b/LoadData/templates/home.html
@@ -17,6 +17,9 @@
       <form action="monkey/search" method="get">
         <input type="submit" value="Search">
       </form>
+      <form action="monkey/massupload" method="get">
+        <input type="submit" value="Massive Upload">
+      </form>
     </div>
   </body>
 </html>
