--- a/LoadData/templates/analysis.html
+++ b/LoadData/templates/analysis.html
@@ -10,6 +10,8 @@
   <body>
     <div class="container">
       <h3>Select your analysis</h3>
+
+      <!-- Analysis form -->
       <form id="analysis_form" class="" action="" method="post">
         <input id="indcur" type="radio" name="analysis" value="ind_curve">
         <label for="indcur">Induction curve</label><br>
@@ -22,33 +24,177 @@
 
       </form>
 
+      <!-- Induction curve form -->
       <form id="ind_form" class="d-none" action="" method="">
         <h5>Choose the function for the induction curve</h5>
         <input id="ratrho" type="radio" name="induction" value="rat_rho">
         <label for="ratrho">Ratiometric rho</label><br>
 
+        <input id="ratalpha" type="radio" name="induction" value="rat_alpha">
+        <label for="ratalpha">Ratiometric alpha</label><br>
+
         <input id="meanexp" type="radio" name="induction" value="mean_exp">
-        <label for="meanexp">Kymograph</label><br>
+        <label for="meanexp">Mean expression</label><br>
       </form>
 
+      <!-- Ratiometric rho form -->
+      <form id="rat_rho_form" class="d-none" action="" method="">
+        <h5>Ratiometric rho parameters</h5>
+        Gompertz min and max values <br>
+        Min
+        <input type="text" name="min1" value="">
+        <input type="text" name="min2" value="">
+        <input type="text" name="min3" value=""><br>
+        Max
+        <input type="text" name="max1" value="">
+        <input type="text" name="max2" value="">
+        <input type="text" name="max3" value=""><br>
+
+        Measurement name 1 (mname1)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Meaurement name 2 (mname2)
+        <select id="mname2">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Number of doubling times (ndt)
+        <input type="text" name="ndt" value=""><br>
+      </form>
+
+      <!-- Ratiometric alpha form -->
+      <form id="rat_alpha_form" class="d-none" action="" method="">
+        <h5>Ratiometric alpha parameters</h5>
+        Gompertz min and max values <br>
+        Min
+        <input type="text" name="min1" value="">
+        <input type="text" name="min2" value="">
+        <input type="text" name="min3" value=""><br>
+        Max
+        <input type="text" name="max1" value="">
+        <input type="text" name="max2" value="">
+        <input type="text" name="max3" value=""><br>
+
+        Measurement name (mname)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Number of doubling times (ndt)
+        <input type="text" name="ndt" value=""><br>
+      </form>
+
+      <!-- Mean expression form -->
+      <form id="mean_form" class="d-none" action="" method="">
+        <h5>Mean expression parameters</h5>
+        Measurement name 1 (mname1)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+        </select>
+      </form>
+
+
+      <!-- Heatmap form -->
       <form id="heat_form" class="d-none" action="" method="">
-        <h5>Heatmap parameters</h5>
-        Parameter 1
-        <input type="text" name="" value=""><br>
-        Parameter 2
-        <input type="text" name="" value=""><br>
-        Parameter 3
-        <input type="text" name="" value=""><br>
+        <h5>Choose the function for the induction curve</h5>
+        <input id="heat_ratrho" type="radio" name="induction" value="rat_rho">
+        <label for="heat_ratrho">Ratiometric rho</label><br>
+
+        <input id="heat_ratalpha" type="radio" name="induction" value="rat_alpha">
+        <label for="heat_ratalpha">Ratiometric alpha</label><br>
+
+        <input id="heat_meanexp" type="radio" name="induction" value="mean_exp">
+        <label for="heat_meanexp">Mean expression</label><br>
       </form>
 
+      <!-- Ratiometric rho form -->
+      <form id="heat_rat_rho_form" class="d-none" action="" method="">
+        <h5>Ratiometric rho parameters</h5>
+        Criteria to bin by (bin)
+        <input type="text" name="bin" value=""><br>
+        Gompertz min and max values <br>
+        Min
+        <input type="text" name="min1" value="">
+        <input type="text" name="min2" value="">
+        <input type="text" name="min3" value=""><br>
+        Max
+        <input type="text" name="max1" value="">
+        <input type="text" name="max2" value="">
+        <input type="text" name="max3" value=""><br>
+
+        Measurement name 1 (mname1)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Meaurement name 2 (mname2)
+        <select id="mname2">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Number of doubling times (ndt)
+        <input type="text" name="ndt" value=""><br>
+      </form>
+
+      <!-- Ratiometric alpha form -->
+      <form id="heat_rat_alpha_form" class="d-none" action="" method="">
+        <h5>Ratiometric alpha parameters</h5>
+        Criteria to bin by (bin)
+        <input type="text" name="bin" value=""><br>
+        Gompertz min and max values <br>
+        Min
+        <input type="text" name="min1" value="">
+        <input type="text" name="min2" value="">
+        <input type="text" name="min3" value=""><br>
+        Max
+        <input type="text" name="max1" value="">
+        <input type="text" name="max2" value="">
+        <input type="text" name="max3" value=""><br>
+
+        Measurement name (mname)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+       </select><br>
+        Number of doubling times (ndt)
+        <input type="text" name="ndt" value=""><br>
+      </form>
+
+      <!-- Mean expression form -->
+      <form id="heat_mean_form" class="d-none" action="" method="">
+        <h5>Mean expression parameters</h5>
+        Criteria to bin by (bin)
+        <input type="text" name="bin" value=""><br>
+        Measurement name 1 (mname1)
+        <select id="mname1">
+         <option value="cfp">CFP</option>
+         <option value="yfp">YFP</option>
+         <option value="rfp">RFP</option>
+        </select>
+      </form>
+
+      <!-- Kymograph form -->
       <form id="kym_form" class="d-none" action="" method="">
         <h5>Kymograph parameters</h5>
-        Parameter 1
-        <input type="text" name="" value=""><br>
-        Parameter 2
-        <input type="text" name="" value=""><br>
-        Parameter 3
-        <input type="text" name="" value=""><br>
+          Measurement name 1 (mname1)
+          <select id="mname1">
+           <option value="cfp">CFP</option>
+           <option value="yfp">YFP</option>
+           <option value="rfp">RFP</option>
+         </select><br>
+          Skip (skip)
+          <input type="text" name="skip" value=""><br>
+        </form>
       </form>
 
       <br>
@@ -64,25 +210,90 @@
 
     $(document).ready(function() {
 
-      $("#analysis_form input[id='indcur']").on("click", () =>{
-        $("#ind_form").removeClass("d-none");
+      // INDUCTION CURVE
+      $("#analysis_form input[id='indcur']").on("click", () => {
+        $("#ind_form").removeClass("d-none")
         $("#heat_form").addClass("d-none")
         $("#kym_form").addClass("d-none")
+
+        // Make heatmap forms dissapear
+        $("#heat_rat_rho_form").addClass("d-none")
+        $("#heat_rat_alpha_form").addClass("d-none")
+        $("#heat_mean_form").addClass("d-none")
       })
 
-      $("#analysis_form input[id='heatmap']").on("click", () =>{
-        $("#ind_form").addClass("d-none");
+      // HEATMAP
+      $("#analysis_form input[id='heatmap']").on("click", () => {
+        $("#ind_form").addClass("d-none")
         $("#heat_form").removeClass("d-none")
         $("#kym_form").addClass("d-none")
+
+        // Make induction curve forms dissapear
+        $("#rat_rho_form").addClass("d-none")
+        $("#rat_alpha_form").addClass("d-none")
+        $("#mean_form").addClass("d-none")
       })
 
-      $("#analysis_form input[id='kym']").on("click", () =>{
-        $("#ind_form").addClass("d-none");
+      // KYMOGRAPH
+      $("#analysis_form input[id='kym']").on("click", () => {
+        $("#ind_form").addClass("d-none")
         $("#heat_form").addClass("d-none")
         $("#kym_form").removeClass("d-none")
+
+        // Make induction curve forms dissapear
+        $("#rat_rho_form").addClass("d-none")
+        $("#rat_alpha_form").addClass("d-none")
+        $("#mean_form").addClass("d-none")
+
+        // Make heatmap forms dissapear
+        $("#heat_rat_rho_form").addClass("d-none")
+        $("#heat_rat_alpha_form").addClass("d-none")
+        $("#heat_mean_form").addClass("d-none")
       })
+
+      // INDUCTION CURVE FUNCTIONS
+      // Check if ratiometric rho selected
+      $("#ind_form input[id='ratrho']").on("click", () => {
+        $("#rat_rho_form").removeClass("d-none")
+        $("#rat_alpha_form").addClass("d-none")
+        $("#mean_form").addClass("d-none")
+      })
+      // Check if ratiometric alpha selected
+      $("#ind_form input[id='ratalpha']").on("click", () => {
+        $("#rat_rho_form").addClass("d-none")
+        $("#rat_alpha_form").removeClass("d-none")
+        $("#mean_form").addClass("d-none")
+      })
+      // Check if mean expression selected
+      $("#ind_form input[id='meanexp']").on("click", () => {
+        $("#rat_rho_form").addClass("d-none")
+        $("#rat_alpha_form").addClass("d-none")
+        $("#mean_form").removeClass("d-none")
+      })
+
+      // HEATMAP FUNCTIONS
+      // Check if ratiometric rho selected
+      $("#heat_form input[id='heat_ratrho']").on("click", () => {
+        $("#heat_rat_rho_form").removeClass("d-none")
+        $("#heat_rat_alpha_form").addClass("d-none")
+        $("#heat_mean_form").addClass("d-none")
+      })
+      // Check if ratiometric alpha selected
+      $("#heat_form input[id='heat_ratalpha']").on("click", () => {
+        $("#heat_rat_rho_form").addClass("d-none")
+        $("#heat_rat_alpha_form").removeClass("d-none")
+        $("#heat_mean_form").addClass("d-none")
+      })
+      // Check if mean expression selected
+      $("#heat_form input[id='heat_meanexp']").on("click", () => {
+        $("#heat_rat_rho_form").addClass("d-none")
+        $("#heat_rat_alpha_form").addClass("d-none")
+        $("#heat_mean_form").removeClass("d-none")
+      })
+
     })
 
+      // AL PRESIONAR ANALIZAR CHEQUEO TODAS LAS OPCIONES
       $("#analyse").on("click", () => {
         if($("#indcur").is(':checked')) {
           // Extraer los parámetros del análisis
