--- a/LoadData/templates/search.html
+++ b/LoadData/templates/search.html
@@ -4,37 +4,42 @@
     <meta charset="utf-8">
     <title>Search</title>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
   </head>
   <body>
-    <div class="container">
-      <h1>Start your search</h1>
-    </div>
 
     <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <h2>Start your search</h2>
+          <form id="schForm" action="searchre" method="post">
+            {% csrf_token %}
+            Experiment<br>
+            <input type="text" name="exp_name" placeholder=""><br>
+            DNA<br>
+            <input type="text" name="dna_name"><br>
+            Media<br>
+            <input type="text" name="med_name"><br>
+            Strain<br>
+            <input type="text" name="str_name"><br>
+            Inducer<br>
+            <input type="text" name="ind_name"><br>
+            Measurement name<br>
+            <input type="text" name="mea_name" placeholder=""><br>
 
-      <form id="schForm" action="searchre" method="post">
-        {% csrf_token %}
-        Experiment<br>
-        <input type="text" name="exp_name" placeholder=""><br>
-        DNA<br>
-        <input type="text" name="dna_name"><br>
-        Media<br>
-        <input type="text" name="med_name"><br>
-        Strain<br>
-        <input type="text" name="str_name"><br>
-        Inducer<br>
-        <input type="text" name="ind_name"><br>
-        Measurement name<br>
-        <input type="text" name="mea_name" placeholder=""><br>
+            <button id="subPlot" type="button" name="button">Plot</button>
+            <button id="subAnalyse" type="submit" name="button">Analyse</button>
+          </form>
+        </div>
+        <div id="plot" class="col-8">
 
-        <button id="subPlot" type="submit" name="button">Plot</button>
-        <button id="subAnalyse" type="submit" name="button">Analyse</button>
-      </form>
+        </div>
+      </div>
+
     </div>
 
     <script>
@@ -46,7 +51,9 @@
         let data = []
         $("#subPlot").on("click", () => {
           data.push($("#schForm input").serializeArray())
-          console.log(data)
+          $.post('/monkey/plot', {param1: data, csrfmiddlewaretoken: $("#schForm input[name='csrfmiddlewaretoken']").val()}, function(data2, textStatus, xhr) {
+            $( "#plot" ).empty().append( data2 )
+          });
         })
 
         $("#subAnalyse").on("click", () => {
