--- a/LoadData/templates/search.html
+++ b/LoadData/templates/search.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'to_plot.css' %}">
 
   </head>
   <body>
-
+    <br/><br/>
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -48,15 +50,46 @@
 
       $(document).ready(function() {
 
-        let data = []
         $("#subPlot").on("click", () => {
+          let data = []
           data.push($("#schForm input").serializeArray())
           $.post('/monkey/plot', {param1: data, csrfmiddlewaretoken: $("#schForm input[name='csrfmiddlewaretoken']").val()}, function(data2, textStatus, xhr) {
-            $( "#plot" ).empty().append( data2 )
+            $( "#plot" ).empty().append( data2)
+
+            // Function that gives effects to tab element
+            var $tabButtonItem = $('#tab-button li'),
+                $tabSelect = $('#tab-select'),
+                $tabContents = $('.tab-contents'),
+                activeClass = 'is-active';
+
+            $tabButtonItem.first().addClass(activeClass);
+            $tabContents.not(':first').hide();
+
+            $tabButtonItem.find('a').on('click', function(e) {
+              var target = $(this).attr('href');
+
+              $tabButtonItem.removeClass(activeClass);
+              $(this).parent().addClass(activeClass);
+              $tabSelect.val(target);
+              $tabContents.hide();
+              $(target).show();
+              e.preventDefault();
+            });
+
+            $tabSelect.on('change', function() {
+              var target = $(this).val(),
+                  targetSelectNum = $(this).prop('selectedIndex');
+
+              $tabButtonItem.removeClass(activeClass);
+              $tabButtonItem.eq(targetSelectNum).addClass(activeClass);
+              $tabContents.hide();
+              $(target).show();
+            });
           });
         })
 
         $("#subAnalyse").on("click", () => {
+          let data = []
           data.push($("#schForm input").serializeArray())
           console.log(data)
         })
